  new vchan and get all of the old users over to the new vchan.  The takeover
  people will then be sitting opped by themselves in a vchan while the
  original users are back the way they were before in another vchan.

  The command CJOIN and vchans are configurable in the config file:
       vchans_oper_only=yes; will make CJOIN oper only
       disable_vchans=yes;   will stop vchans being recognised on this server

- Channels that have existed for at least 30 minutes are now preserved for 30
  minutes if they are empty or split.  If a channel was +i before a split, it
  will remain that way for 30 minutes.  All bans will still exist, preventing
  abusers from joining through a ban on splits.  A user that does successfully
  join an empty preserved channel will have ops.  If it was split at the time,
  the timestamp protocol will remove the newer side's ops.  These preserved
  channels replace the old NO_CHANOPS_ON_SPLIT and NO_JOIN_ON_SPLIT options.

  Channels will not be preserved if the last user parts from the channel.


--------------
 User Changes: 
--------------

- AWAY is now propagated from server to server

- Server side ignore is included for all users.  Setting user mode +g will
  make you ignore all private messages.  Channel messages are not affected.
   People who you wish to communicate with can be permitted with the
  /quote ACCEPT nick command.  The current accept list can be seen with  
  /quote ACCEPT *, and nicks can be removed with /quote ACCEPT -nick.
  When a user tries to message you when you are set +g, and they are not
  on the accept list, they will receive a message saying you are on server
  side ignore.  You will also receive a message, but it is paced, so you will
  only receive a notification every 60 seconds.  When a user changes his or
  her nick, he or she will be removed from any other user's ACCEPT list.  This
  must be done in order to prevent other users from being able to trace another