@@ -1,7 +1,7 @@
 /* A lexical scanner generated by flex */
 
 /* Scanner skeleton version:
- * $Header: /cvsroot/ircd-hybrid/contrib/Attic/vms_lex_yy.c,v 1.2 2001/08/06 07:03:43 ejb Exp $
+ * $Header: /cvsroot/ircd-hybrid/contrib/Attic/vms_lex_yy.c,v 1.3 2001/10/17 15:25:22 jdc Exp $
  */
 
 #define FLEX_SCANNER
@@ -1129,7 +1129,7 @@ char *yytext;
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: vms_lex_yy.c,v 1.2 2001/08/06 07:03:43 ejb Exp $
+ * $Id: vms_lex_yy.c,v 1.3 2001/10/17 15:25:22 jdc Exp $
  */
 #define YY_NO_UNPUT 1
 #line 29 "ircd_lexer.l"
@@ -1580,7 +1580,7 @@ YY_RULE_SETUP
 case 31:
 YY_RULE_SETUP
 #line 131 "ircd_lexer.l"
-{ return DISABLE_VCHANS; }
+{ return USE_VCHANS; }
 	YY_BREAK
 case 32:
 YY_RULE_SETUP
