@@ -1,5 +1,5 @@
 /* Hybrid 7 Example configuration file
- * $Id: example.conf,v 7.135 2001/10/11 18:09:40 db Exp $
+ * $Id: example.conf,v 7.136 2001/10/17 15:25:23 jdc Exp $
  * December 2000 - ejb, wcampbel, db and others
  */
 
@@ -606,6 +606,14 @@ channel {
 	 */
 	use_knock = no;
 
+        /* use_vchans
+         * disable the creation of vchans by remote servers.. we do not
+         * currently recommend this feature, as it removes a lot of
+         * functionality, however it's here for those who don't want
+         * vchan support at all.
+         */
+        use_vchans = yes;
+
 	/* vchans_oper_only
          * allow non-opers to use CJOIN?
 	 *
@@ -613,14 +621,6 @@ channel {
  	 * use cjoin when this is set, this is still EFNet compatible 100%
 	 */
 	vchans_oper_only = yes;
-
-        /* disable_vchans
-         * disable the creation of vchans by remote servers.. we do not
-         * currently recommend this feature, as it removes a lot of
-         * functionality, however it's here for those who don't want
-         * vchan support at all.
-	 */
-        disable_vchans = no;
 
 	/* min time between knocks to a channel */
 	knock_delay = 1 minute;
