@@ -42,7 +42,8 @@ options that were in config.h, to be changed with a /rehash.
 
   The command CJOIN and vchans are configurable in the config file:
        vchans_oper_only=yes; will make CJOIN oper only
-       disable_vchans=yes;   will stop vchans being recognised on this server
+       use_vchans=no;        will stop vchans from being recognised on
+                             this server
 
 - Channels that have existed for at least 30 minutes are now preserved for 30
   minutes if they are empty or split.  If a channel was +i before a split, it
@@ -241,5 +242,5 @@ options that were in config.h, to be changed with a /rehash.
               outgoing data.
     
 
-# $Id: whats-new.txt,v 7.28 2001/08/22 21:44:36 leeh Exp $
+# $Id: whats-new.txt,v 7.29 2001/10/17 15:25:23 jdc Exp $
 
